# haskell-webkit-editor-example

./: .gitignore  README.md  stack.yaml  webkit-editor-example.cabal
app/: Main.hs
